added footer and fixed alignment

--- a/index.html
+++ b/index.html
@@ -30,8 +30,27 @@
         </div>
         
         <div id="search-bar">
-            <input name="search" type="text" autofocus>
+            <input name="search" type="text" autofocus spellcheck="true">
+            <div id="mic-icon"><img id="mic" src="images/google-mic-icon.png"></div>
         </div>
-        
+
+        <div id="search-button-container">
+            <div id="search-button">Google Search</div>
+            <div id="lucky-button">I'm Feeling Lucky</div>
+        </div>
+
+        <div id="footer">
+            <div id="left-foot">
+                <div class="left-foot-item">Advertising</div>
+                <div class="left-foot-item">Business</div>
+                <div class="left-foot-item">How Search works</div>
+            </div>
+            <div id="right-foot">
+                <div class="right-foot-item">Privacy</div>
+                <div class="right-foot-item">Terms</div>
+                <div class="right-foot-item">Settings</div>
+            </div>
+
+        </div>
     </body>
 </html>
